Fix nav bar alignment

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -119,8 +119,10 @@
 }
 
 .nav > ul {
+	height: 100%;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
+	align-items: center;
 }
 
 .sidebar {
